--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 .container {
   margin: 0 auto;
   width: 100%;
-  /* background: goldenrod; */
+  background: goldenrod;
   text-align: center;
 }
 
