--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,25 @@
 
 button {
   font-size: 2.5rem;
+  color: green !important;
+text-transform: uppercase;
+background: white;
+padding: 20px;
+border: 4px solid yellow !important;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.3s ease 0s;
 }
+button:hover {
+  color: black !important;
+  border-radius: 50px;
+  border-color: whitesmoke !important;
+  transition: all 0.3s ease 0s;
+  }
 
 input[type='text'] {
   font-size: 2.5rem;
+  color: white;
 }
 
 .timer {
@@ -36,6 +51,8 @@ input[type='text'] {
 }
 
 .timer_controls > * {
+  border: 2px solid white;
+  text-shadow: 2px 2px 3px white;
   flex: 1;
 }
 
