getting stop and restart buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,13 @@ button:hover {
 
 input[type='text'] {
   font-size: 2.5rem;
-  color: white;
+  font-weight: 50%;
+  color: black;
 }
 
 .timer {
   display: flex;
-  min-height: 100vh;
+  min-height:90vh;
   background: url('https://source.unsplash.com/random');
   background-repeat: no-repeat;
   background-position: center;
@@ -48,6 +49,7 @@ input[type='text'] {
 
 .timer_controls {
   display: flex;
+  backdrop-filter: blur(2px);
 }
 
 .timer_controls > * {
@@ -98,10 +100,35 @@ input[type='text'] {
   font-size: 25rem;
   margin: 0;
   color: white;
-  text-shadow: 4px 4px 0 rbga(0, 0, 0, 0.05);
+  text-shadow: 4px 4px 2px rbga(0, 0, 0, 0.05);
 }
 
 .display_return-time {
   font-weight: 500;
   font-size: 5rem;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.stop-btn {
+  padding: 10px 20px;
+  background-color: #ff6344;
+}
+
+.reset-btn {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: rgb(0, 174, 255);
+}
+@media(max-width: 500px){
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .timer {
+    flex-direction: column;
+    width: 75%;
+  }
 }
